Alteração de nome de ID

--- a/Bliblioteca 2020/index.html
+++ b/Bliblioteca 2020/index.html
@@ -22,14 +22,14 @@
             <label for="componentes">Componentes</label>
             <select class="form-control" name="componentes" id="componentes">
               <option value="" selected>Selecione</option>
-              <option value="inputText">Input Text</option>
+              <option value="input-text">Input Text</option>
               <option value="2-componente">Segundo componente</option>
               <option value="3-componente">Terceiro componente</option>
             </select>
           </div>
         </div>
       </div>
-      <section class="div-sel" id="inputText">
+      <section class="div-sel" id="input-text">
         <div class="row">
           <div class="col-12">
             <div class="example">
